[gd_scene load_steps=11 format=3 uid="uid://dfybak1a8hvdw"]

[ext_resource type="Script" path="res://scripts/levels/main_menu.gd" id="1_8h5so"]
[ext_resource type="Texture2D" uid="uid://dvuhs07os2hm6" path="res://assets/Actors/Player/idle.png" id="1_cm0l6"]
[ext_resource type="FontFile" uid="uid://dovacx3vyj0dl" path="res://assets/UI/Font/RevMiniPixel.ttf" id="1_x3n3s"]
[ext_resource type="Texture2D" uid="uid://cv3pw3b0eqsu1" path="res://assets/Tilesets/plataforma_padrao/plataforma_padrao.png" id="2_usy0w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i84lc"]
texture = ExtResource("2_usy0w")
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
5:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
5:6/0 = 0

[sub_resource type="TileSet" id="TileSet_keylt"]
sources/0 = SubResource("TileSetAtlasSource_i84lc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s3jbq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4t2e"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ytwx"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74t88"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-65.5, -23.5)
tile_set = SubResource("TileSet_keylt")
format = 2
layer_0/tile_data = PackedInt32Array(1114116, 65536, 4, 1179652, 65536, 5, 1245188, 65536, 5, 1114117, 131072, 4, 1179653, 131072, 5, 1245189, 131072, 5, 1114118, 131072, 4, 1179654, 131072, 5, 1245190, 131072, 5, 1114119, 131072, 4, 1179655, 131072, 5, 1245191, 131072, 5, 1114120, 131072, 4, 1179656, 131072, 5, 1245192, 131072, 5, 1114121, 131072, 4, 1179657, 131072, 5, 1245193, 131072, 5, 1114122, 131072, 4, 1179658, 131072, 5, 1245194, 131072, 5, 1114123, 131072, 4, 1179659, 131072, 5, 1245195, 131072, 5, 1114124, 131072, 4, 1179660, 131072, 5, 1245196, 131072, 5, 1114125, 131072, 4, 1179661, 131072, 5, 1245197, 131072, 5, 1114126, 131072, 4, 1179662, 131072, 5, 1245198, 131072, 5, 1114127, 131072, 4, 1179663, 131072, 5, 1245199, 131072, 5, 1114128, 131072, 4, 1179664, 131072, 5, 1245200, 131072, 5, 1114129, 131072, 4, 1179665, 131072, 5, 1245201, 131072, 5, 1114130, 131072, 4, 1179666, 131072, 5, 1245202, 131072, 5, 1114131, 131072, 4, 1179667, 131072, 5, 1245203, 131072, 5, 1114132, 131072, 4, 1179668, 131072, 5, 1245204, 131072, 5, 1114133, 131072, 4, 1179669, 131072, 5, 1245205, 131072, 5, 1114134, 131072, 4, 1179670, 131072, 5, 1245206, 131072, 5, 1114135, 131072, 4, 1179671, 131072, 5, 1245207, 131072, 5, 1114136, 131072, 4, 1179672, 131072, 5, 1245208, 131072, 5, 1114137, 131072, 4, 1179673, 131072, 5, 1245209, 131072, 5, 1114138, 131072, 4, 1179674, 131072, 5, 1245210, 131072, 5, 1114139, 131072, 4, 1179675, 131072, 5, 1245211, 131072, 5, 1114140, 131072, 4, 1179676, 131072, 5, 1245212, 131072, 5, 1114141, 131072, 4, 1179677, 131072, 5, 1245213, 131072, 5, 1114142, 131072, 4, 1179678, 131072, 5, 1245214, 131072, 5, 1114143, 131072, 4, 1179679, 131072, 5, 1245215, 131072, 5, 1114144, 131072, 4, 1179680, 131072, 5, 1245216, 131072, 5, 1114145, 131072, 4, 1179681, 131072, 5, 1245217, 131072, 5, 1114146, 131072, 4, 1179682, 131072, 5, 1245218, 131072, 5, 1114147, 131072, 4, 1179683, 131072, 5, 1245219, 131072, 5, 1114148, 131072, 4, 1179684, 131072, 5, 1245220, 131072, 5, 1114149, 131072, 4, 1179685, 131072, 5, 1245221, 131072, 5, 1114150, 131072, 4, 1179686, 131072, 5, 1245222, 131072, 5, 1114151, 131072, 4, 1179687, 131072, 5, 1245223, 131072, 5, 1310724, 65536, 5, 1376260, 65536, 6, 1310725, 131072, 5, 1376261, 131072, 6, 1310726, 131072, 5, 1376262, 131072, 6, 1310727, 131072, 5, 1376263, 131072, 6, 1310728, 131072, 5, 1376264, 131072, 6, 1310729, 131072, 5, 1376265, 131072, 6, 1310730, 131072, 5, 1376266, 131072, 6, 1310731, 131072, 5, 1376267, 131072, 6, 1310732, 131072, 5, 1376268, 131072, 6, 1310733, 131072, 5, 1376269, 131072, 6, 1310734, 131072, 5, 1376270, 131072, 6, 1310735, 131072, 5, 1376271, 131072, 6, 1310736, 131072, 5, 1376272, 131072, 6, 1310737, 131072, 5, 1376273, 131072, 6, 1310738, 131072, 5, 1376274, 131072, 6, 1310739, 131072, 5, 1376275, 131072, 6, 1310740, 131072, 5, 1376276, 131072, 6, 1310741, 131072, 5, 1376277, 131072, 6, 1310742, 131072, 5, 1376278, 131072, 6, 1310743, 131072, 5, 1376279, 131072, 6, 1310744, 131072, 5, 1376280, 131072, 6, 1310745, 131072, 5, 1376281, 131072, 6, 1310746, 131072, 5, 1376282, 131072, 6, 1310747, 131072, 5, 1376283, 131072, 6, 1310748, 131072, 5, 1376284, 131072, 6, 1310749, 131072, 5, 1376285, 131072, 6, 1310750, 131072, 5, 1376286, 131072, 6, 1310751, 131072, 5, 1376287, 131072, 6, 1310752, 131072, 5, 1376288, 131072, 6, 1310753, 131072, 5, 1376289, 131072, 6, 1310754, 131072, 5, 1376290, 131072, 6, 1310755, 131072, 5, 1376291, 131072, 6, 1310756, 131072, 5, 1376292, 131072, 6, 1310757, 131072, 5, 1376293, 131072, 6, 1310758, 131072, 5, 1376294, 131072, 6, 1310759, 131072, 5, 1376295, 131072, 6, 1114152, 131072, 4, 1179688, 131072, 5, 1245224, 131072, 5, 1310760, 131072, 5, 1376296, 131072, 6, 1114153, 131072, 4, 1179689, 131072, 5, 1245225, 131072, 5, 1310761, 131072, 5, 1376297, 131072, 6, 1114154, 131072, 4, 1179690, 131072, 5, 1245226, 131072, 5, 1310762, 131072, 5, 1376298, 131072, 6, 1114155, 196608, 4, 1179691, 196608, 5, 1245227, 196608, 5, 1310763, 196608, 5, 1376299, 196608, 6)

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8h5so")

[node name="Background" type="ColorRect" parent="MainMenu"]
visible = false
layout_mode = 2
color = Color(0.729412, 0.509804, 0.0313726, 1)

[node name="Jane" type="Sprite2D" parent="MainMenu/Background"]
position = Vector2(49, 125)
scale = Vector2(2.32, 2.32)
texture = ExtResource("1_cm0l6")
region_enabled = true
region_rect = Rect2(192, 0, 32, 32)

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("1_x3n3s")
theme_override_font_sizes/font_size = 24
text = "Under Control"

[node name="CenterContainer2" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../../../CenterContainer4/VBoxContainer/CenterContainer/Exit")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_x3n3s")
theme_override_styles/normal = SubResource("StyleBoxFlat_s3jbq")
theme_override_styles/hover = SubResource("StyleBoxFlat_t4t2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6ytwx")
theme_override_styles/focus = SubResource("StyleBoxFlat_74t88")
text = "Começar
"
flat = true
icon_alignment = 1

[node name="CenterContainer3" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer3"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2

[node name="Credits" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_x3n3s")
theme_override_styles/normal = SubResource("StyleBoxFlat_s3jbq")
theme_override_styles/hover = SubResource("StyleBoxFlat_t4t2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6ytwx")
theme_override_styles/focus = SubResource("StyleBoxFlat_74t88")
text = "Créditos"
flat = true
icon_alignment = 1

[node name="CenterContainer4" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer4"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer"]
layout_mode = 2

[node name="Exit" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../../../CenterContainer2/VBoxContainer/CenterContainer/Start")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_x3n3s")
theme_override_styles/normal = SubResource("StyleBoxFlat_s3jbq")
theme_override_styles/hover = SubResource("StyleBoxFlat_t4t2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6ytwx")
theme_override_styles/focus = SubResource("StyleBoxFlat_74t88")
text = "Sair"
flat = true
icon_alignment = 1

[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/Start" to="MainMenu" method="_on_start_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/CenterContainer4/VBoxContainer/CenterContainer/Exit" to="MainMenu" method="_on_exit_pressed"]
